got a working floating cube

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
 
   <body>
-    <button id="canvas-demo">Canvas Demo</button>
-    <button id="DOM-demo">DOM Demo</button>
-    <script src="./dist/main.js"></script>
+    <!-- <button id="canvas-demo">Canvas Demo</button>
+    <button id="DOM-demo">DOM Demo</button> -->
+    <!-- <script src="./dist/main.js"></script> -->
+    <script src="./src/three.js"></script>
+    <script src="./src/scripts/scenes/scene1.js"></script>
+
+
+
   </body>
 </html>
