--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <button id="DOM-demo">DOM Demo</button> -->
     <!-- <script src="./dist/main.js"></script> -->
     <script src="./src/three.js"></script>
+    <!-- <script src="./src/scripts/controls/PointerLockControls.js"></script> -->
     <script src="./src/scripts/scenes/scene1.js"></script>
+    <!-- <script src="./src/index.js"></script> -->
 
 
 
