--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div id="instructions">
         <span style="font-size:40px">CLICK TO START</span>
         <br />
+        CONTROLS: WASD and Shift to run, look around with the mouse
         
       </div>
     
