--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link rel="stylesheet" href="test.css" />
-    <title>Document</title>
+    <title>EXPLORER</title>
   </head>
 
   <body>
