sprint meter working

--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
          <p class="orb-nums" id="points"></p>
       </div>
 
+      <div class="sprint">
+          <div id="sprint-bar">
+  
+             
+  
+          </div>
+      </div>
       <div class="health">
         <div id="player-health">
 
