--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/x-icon" href="src/images/michael_wideburg.ico" />
+    <!-- Primary Meta Tags -->
+    <title>ORB BLASTER</title>
+    <meta name="title" content="ORB BLASTER">
+    <meta name="description" content="First person shooter design with vanilla js using Three.js">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mwideburg.github.io/explore_js/">
+    <meta property="og:title" content="ORB BLASTER">
+    <meta property="og:description" content="First person shooter design with vanilla js using Three.js">
+    <meta property="og:image" content="/image/orb_blaster.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mwideburg.github.io/explore_js/">
+    <meta property="twitter:title" content="ORB BLASTER">
+    <meta property="twitter:description" content="First person shooter design with vanilla js using Three.js">
+    <meta property="twitter:image" content="/images/orb_blaster.png">
 
     <link rel="stylesheet" href="test.css" />
     <title>Orb</title>
