--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://mwideburg.github.io/explore_js/">
     <meta property="og:title" content="ORB BLASTER">
     <meta property="og:description" content="First person shooter design with vanilla js using Three.js">
-    <meta property="og:image" content="/image/orb_blaster.png">
+    <meta property="og:image" content="src/images/orb_blaster.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://mwideburg.github.io/explore_js/">
     <meta property="twitter:title" content="ORB BLASTER">
     <meta property="twitter:description" content="First person shooter design with vanilla js using Three.js">
-    <meta property="twitter:image" content="/images/orb_blaster.png">
+    <meta property="twitter:image" content="src/images/orb_blaster.png">
 
     <link rel="stylesheet" href="test.css" />
     <title>Orb</title>
